--- a/alire.toml
+++ b/alire.toml
@@ -7,7 +7,7 @@ maintainers = ["Olivier Henley <olivier.henley@gmail.com>"]
 maintainers-logins = ["ohenley"]
 
 [configuration.variables]
-eth = { type = "Enum", values = ["yes", "no"], default = "no" }
+eth = { type = "Enum", values = ["yes", "no"], default = "yes" }
 framebuffer_ltdc = { type = "Enum", values = ["yes", "no"], default = "yes" }
 dma2d_bitmap = { type = "Enum", values = ["yes", "no"], default = "yes" }
 bitmap = { type = "Enum", values = ["yes", "no"], default = "yes" }
@@ -16,3 +16,4 @@ bitmap = { type = "Enum", values = ["yes", "no"], default = "yes" }
 bare_types = "0.1.0-dev"
 bare_hal = "0.1.0-dev"
 bare_drivers = "0.1.0-dev"
+bare_devices = "0.1.0-dev"
